# Human_scDVP_data_dashboard

./: README.md  pyproject.toml
dashboard/: dvp_dashboard.py
dashboard/statics/Shapes/: CHTL3.pkl  CHTL34.pkl  CHTL36.pkl  CHTL38.pkl  CHTL59.pkl  CHTL73.pkl  NML10.pkl  NML11.pkl  NML15.pkl  NML16.pkl  NML17.pkl  NML20.pkl  NML31.pkl  NML4.pkl  NML5.pkl  NML6.pkl  NML7.pkl  NML9.pkl
data/human/: all_scores.tsv
data/mouse/: all_scores.tsv
results/human_controls/: results_1_cutoff=0.7.tsv
results/human_disrupted/: results_2_cutoff=0.7.tsv
