[tool.poetry]
name = "human-scdvp-analysis"
version = "0.1.0"
description = "Series of analysis scripts for true-spatial single-cell deep visual proteomics"
authors = ["Lucas Miranda, Paolo Pellizzoni"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
notebook = "^7.3.2"
streamlit = "^1.39.0"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
